# django-drf-cookiecutter-template

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: celery.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: base_model.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/components/: api_apps.py  common.py  environ.py  logging.py  mail.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/environments/: development.py  production.py
