[tool.poetry]
name = "django-drf-cookiecutter-template"
version = "0.1.0"
description = ""
authors = ["Abhijeet Sonawane <abhijeet.sonawane001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.6.0"
django = "^5.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
